<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <android.support.v4.widget.SwipeRefreshLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/swipe">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="@dimen/activity_horizontal_margin">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:gravity="center">

                            <ImageView
                                android:layout_width="60dp"
                                android:layout_height="60dp"
                                android:id="@+id/imgHome"
                                android:scaleType="centerCrop"
                                android:src="@drawable/ic_local_cafe_black_24dp"
                                android:contentDescription="TODO" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/txtHomeTeam"
                                android:text="@string/team_name"
                                android:gravity="center"
                                android:textSize="@dimen/team_name_size"
                                android:textColor="@color/colorPrimary"/>

                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:gravity="center">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/txtDate"
                                android:hint="@string/str_date"
                                android:textColor="@color/colorPrimary"
                                android:gravity="center"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/txtTime"
                                android:textSize="12sp"
                                android:text="@string/time"
                                android:gravity="center"/>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:gravity="center">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:id="@+id/txtHomeScore"
                                    android:hint="@string/score"
                                    android:textSize="40sp"
                                    android:textStyle="bold"/>

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/vs"
                                    android:layout_marginRight="@dimen/half_margin"
                                    android:layout_marginLeft="@dimen/half_margin"/>

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:id="@+id/txtAwayScore"
                                    android:hint="@string/score"
                                    android:textSize="40sp"
                                    android:textStyle="bold"/>
                            </LinearLayout>

                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:gravity="center">

                            <ImageView
                                android:layout_width="60dp"
                                android:layout_height="60dp"
                                android:id="@+id/imgAway"
                                android:scaleType="centerCrop"
                                android:src="@drawable/ic_local_cafe_black_24dp"
                                android:contentDescription="TODO" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/txtAwayTeam"
                                android:text="@string/team_name"
                                android:gravity="center"
                                android:textSize="@dimen/team_name_size"
                                android:textColor="@color/colorPrimary"/>

                        </LinearLayout>
                    </TableRow>
                </TableLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/grey"
                    android:layout_margin="@dimen/activity_horizontal_margin"></View>

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/txtHomeGoals"
                                android:text="@string/team_goals"
                                android:gravity="center"
                                android:layout_gravity="center"/>

                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/goals"
                                android:gravity="center"
                                android:layout_gravity="center"
                                android:textColor="@color/colorPrimary"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/txtAwayGoals"
                                android:text="@string/team_goals"
                                android:gravity="center"
                                android:layout_gravity="center"/>
                        </LinearLayout>
                    </TableRow>
                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:id="@+id/txtHomeShots"
                            android:text="@string/score"
                            android:gravity="center"/>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/shots"
                            android:gravity="center"
                            android:textColor="@color/colorPrimary"/>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:id="@+id/txtAwayShots"
                            android:text="@string/score"
                            android:gravity="center"/>
                    </TableRow>
                </TableLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/grey"
                    android:layout_margin="@dimen/activity_horizontal_margin"></View>

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/lineups"
                            android:gravity="center"/>
                    </TableRow>
                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/txtHomeGk"
                                android:text="@string/team_goals"
                                android:gravity="center"
                                android:layout_gravity="center"/>

                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Goal keeper"
                                android:layout_gravity="center"
                                android:textColor="@color/colorPrimary"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/txtAwayGk"
                                android:text="@string/team_goals"
                                android:gravity="center"
                                android:layout_gravity="center"/>
                        </LinearLayout>
                    </TableRow>
                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/half_margin">
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/txtHomeDefense"
                                android:text="@string/team_goals"
                                android:gravity="center"
                                android:layout_gravity="center"/>

                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Defense"
                                android:layout_gravity="center"
                                android:textColor="@color/colorPrimary"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/txtAwayDefense"
                                android:text="@string/team_goals"
                                android:gravity="center"
                                android:layout_gravity="center"/>
                        </LinearLayout>
                    </TableRow>
                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/half_margin">
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/txtHomeMid"
                                android:text="@string/team_goals"
                                android:gravity="center"
                                android:layout_gravity="center"/>

                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Midfield"
                                android:layout_gravity="center"
                                android:textColor="@color/colorPrimary"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/txtAwayMid"
                                android:text="@string/team_goals"
                                android:gravity="center"
                                android:layout_gravity="center"/>
                        </LinearLayout>
                    </TableRow>
                </TableLayout>
            </LinearLayout>
        </ScrollView>
    </android.support.v4.widget.SwipeRefreshLayout>
</LinearLayout>